Styles: fix animations and add scrollbar colors

--- a/constants/styles/variables.scss
+++ b/constants/styles/variables.scss
@@ -33,6 +33,8 @@
   --colorBackgroundBlockAdditional: #{$ADDITIONAL_BLOCK_BACKGROUND};
   --colorBackgroundMenu: #{$MENU_BACKGROUND};
   --colorBackgroundMaskOverlay: #{$DEFAULT_MASK_OVERLAY_BACKGROUND};
+  --colorScrollbar: #{$SCROLLBAR_COLOR};
+  --colorScrollbarHover: #{$SCROLLBAR_COLOR_HOVER};
   // Typography
   --colorTextMain: #{$MAIN_FONT_COLOR};
   --colorTextWhite: #{$DEFAULT_WHITE_TEXT_COLOR};
